--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,15 @@ after-success:
   - docker push shastakouski/multi-nginx
   - docker push shastakouski/multi-server
   - docker push shastakouski/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-3"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-3-353930031683"
+  bucket_path: "docker-multi"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
